--- a/action.yml
+++ b/action.yml
@@ -8,7 +8,7 @@ inputs:
   GITHUB_TOKEN:
     description: "The GITHUB_TOKEN secret"
     default: "${{ github.token }}"
-    required: true
+    required: false
   bucket:
     description: "Container for spelling configuration"
     required: false
