--- a/action.yml
+++ b/action.yml
@@ -570,6 +570,7 @@ runs:
         sha: ${{ env.PRIVATE_SARIF_SHA }}
         token: ${{ inputs.sarif-token || inputs.GITHUB_TOKEN }}
         check-spelling-working-directory: ${{ inputs.experimental_path }}
+        started-at: ${{ steps.spelling.outputs.started-at }}
     - name: dump-sarif
       continue-on-error: true
       if: (success() || (failure() && env.MERGE_FAILED != '1')) && (github.run_attempt > 1 || env.ACT) && env.UPLOAD_SARIF_LIMITED != ''
